--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,11 +97,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/SplashAppTheme">
 
-          <!--  <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
 
 
             <!-- AppsFlyer Links  new -->
