--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,14 +97,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/RummySdk_SplashAppTheme">
 
-           <!-- <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
--->
-
-            <!-- AppsFlyer Links  new -->
+             AppsFlyer Links  new
             <intent-filter
                 android:autoVerify="true"
                 tools:targetApi="m">
