--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ buildscript {
         leanbackVersion = '1.0.0-beta01'
         legacySupportVersion = '1.0.0-alpha1'
         lifecycleVersion = '2.2.0'
-        materialVersion = '1.2.0-alpha06'
+        materialVersion = '1.4.0'
         mockitoVersion = "2.8.9"
         mockitoKotlinVersion = "1.5.0"
         multidexVersion = "1.0.3"
