--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,14 +96,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/RummySdk_SplashAppTheme">
-<!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
 
-            <!--<intent-filter
+            <intent-filter
                 android:autoVerify="true"
                 tools:targetApi="m">
                 <action android:name="android.intent.action.VIEW" />
@@ -127,7 +126,7 @@
                     android:scheme="@string/appsflyer_open_app_link" />
             </intent-filter>
 
-            &lt;!&ndash; Firebase App Links &ndash;&gt;
+            <!-- Firebase App Links -->
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -137,7 +136,7 @@
                 <data
                     android:host="rummytitans.page.link"
                     android:scheme="https" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.RummyMainActivity"
