add cash amount bug fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,12 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/RummySdk_SplashAppTheme">
+
+          <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
           <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
