--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+//apply plugin: 'com.google.firebase.firebase-perf'
 //apply plugin: 'com.google.firebase.crashlytics'
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'maven-publish'
 
 
 android {
@@ -21,7 +23,7 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         buildConfigField "int", "isPlayStoreApk", "0"
-        buildConfigField "int","VERSION_CODE","48"
+        buildConfigField "int", "VERSION_CODE", "48"
         buildConfigField "String", "VERSION_NAME", "\"1.4.8\""
     }
     buildFeatures {
@@ -62,10 +64,10 @@ android {
 
     flavorDimensions "releaseApk"
     productFlavors {
-        playStoreApp{
+        playStoreApp {
             buildConfigField "int", "isPlayStoreApk", "1"
         }
-        legacyApp{
+        legacyApp {
             buildConfigField "int", "isPlayStoreApk", "0"
         }
     }
@@ -191,14 +193,48 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2:$rx_paging"
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
-     // hilt
+    // hilt
     implementation 'com.google.dagger:hilt-android:2.38.1'
     kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
+    //oneSignal
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+
     //juspay
-    implementation 'in.juspay:hypersdk:2.1.7'
+    implementation 'in.juspay:hypersdk:2.1.20'
+
+    // clevertap
+    implementation 'com.clevertap.android:clevertap-android-sdk:5.2.1'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
 
 
+}
+/*Generating aar and dependency pom file using maven*/
+project.afterEvaluate {
+    publishing {
+        publications {
+            library(MavenPublication) {
+                //setGroupId groupId
+                setGroupId "com.rummytitans.sdk.cardgame"
+//setArtifactId artifactId
+                setArtifactId "titanSdk"
+                version "1.0.0"
+                //artifact bundleReleaseAar
+                artifact("$buildDir/outputs/aar/app-playStoreApp-debug.aar")
+                pom.withXml {
+                    def dependenciesNode = asNode().appendNode('dependencies')
+                    configurations.implementation.allDependencies.each {
+                        if (it.group != null && it.name != null && it.version != null) {
+                            def dependencyNode = dependenciesNode.appendNode('dependency')
+                            dependencyNode.appendNode('groupId', it.group)
+                            dependencyNode.appendNode('artifactId', it.name)
+                            dependencyNode.appendNode('version', it.version)
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
