--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
 apply plugin: 'androidx.navigation.safeargs.kotlin'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'maven-publish'
@@ -14,15 +14,15 @@ android {
     defaultConfig {
         minSdkVersion 22
         targetSdkVersion 33
-        versionCode 48
-        versionName '1.4.8'
+        versionCode 58
+        versionName '1.5.8'
         //applicationId "com.rummytitans.sdk.cardgame"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         buildConfigField "int", "isPlayStoreApk", "0"
-        buildConfigField "int", "VERSION_CODE", "48"
-        buildConfigField "String", "VERSION_NAME", "\"1.4.8\""
+        buildConfigField "int", "VERSION_CODE", "58"
+        buildConfigField "String", "VERSION_NAME", "\"1.5.8\""
     }
     buildFeatures {
         dataBinding true
@@ -40,7 +40,7 @@ android {
     buildTypes {
 
         release {
-            // shrinkResources true
+            //shrinkResources true
             multiDexKeepProguard file('multidex-config.pro')
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -65,9 +65,7 @@ android {
         playStoreApp {
             buildConfigField "int", "isPlayStoreApk", "1"
         }
-        legacyApp {
-            buildConfigField "int", "isPlayStoreApk", "0"
-        }
+
     }
     sourceSets {
         main {
@@ -211,8 +209,8 @@ project.afterEvaluate {
 //setArtifactId artifactId
                 setArtifactId "titanSdk"
                 version "1.0.0"
-                //artifact bundleReleaseAar
-                artifact("$buildDir/outputs/aar/app-playStoreApp-debug.aar")
+                artifact bundlePlayStoreAppReleaseAar
+                //artifact("$buildDir/outputs/aar/app-playStoreApp-debug.aar")
                 pom.withXml {
                     def dependenciesNode = asNode().appendNode('dependencies')
                     configurations.implementation.allDependencies.each {
