--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 bin/
 gen/
 out/
+app/Myteam11 hansel release webs.textClipping
 
 # Gradle files
 .gradle/
@@ -65,3 +66,27 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+
+#app keystore
+app/orgmt11keystore.jks
+
+##amplify
+#amplify/\#current-cloud-backend
+#amplify/.config/local-*
+#amplify/logs
+#amplify/mock-data
+#amplify/backend/amplify-meta.json
+#amplify/backend/awscloudformation
+#amplify/backend/.temp
+#build/
+#dist/
+#node_modules/
+#aws-exports.js
+#awsconfiguration.json
+#amplifyconfiguration.json
+#amplifyconfiguration.dart
+#amplify-build-config.json
+#amplify-gradle-config.json
+#amplifytools.xcconfig
+#.secret-*
