mini walled and bug fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,11 @@ android {
     buildTypes {
 
         release {
-            //shrinkResources true
+            debuggable true
+           /* //shrinkResources true
             multiDexKeepProguard file('multidex-config.pro')
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'*/
         }
     }
 
