--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,10 @@ android {
     buildTypes {
 
         release {
-            debuggable true
-           /* //shrinkResources true
-            multiDexKeepProguard file('multidex-config.pro')
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'*/
+            //shrinkResources true
+           // multiDexKeepProguard file('multidex-config.pro')
+            //minifyEnabled false
+           // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 
