--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,12 +47,8 @@
         <activity
             android:name=".ui.LaunchActivity"
             android:exported="true"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".ui.newlogin.RummyNewLoginActivity"
-            android:exported="false"
-            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
         <activity
             android:name="com.rummytitans.sdk.cardgame.utils.locationservices.uiModules.RequestGPSActivity"
             android:exported="false"
@@ -61,60 +57,13 @@
             android:name=".ui.deeplink.DeepLinkActivityRummy"
             android:exported="true"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.launcher.SDKSplashActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/RummySdk_SplashAppTheme">
-
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-
-
-            <!--
-            <intent-filter
-                android:autoVerify="true"
-                tools:targetApi="m">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="rummytitans.onelink.me"
-                    android:pathPrefix="/FOzv"
-                    android:scheme="https" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="open"
-                    android:scheme="@string/appsflyer_open_app_link" />
-            </intent-filter>
-
-            &lt;!&ndash; Firebase App Links &ndash;&gt;
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="rummytitans.page.link"
-                    android:scheme="https" />
-            </intent-filter>
-            -->
         </activity>
         <activity
             android:name=".ui.RummyMainActivity"
